Styling the issues page
Flexboxing. Issue with the scrollbar causing the flex container not to be centered.

--- a/src/components/issuecard.module.css
+++ b/src/components/issuecard.module.css
@@ -1,6 +1,6 @@
 .issueCard {
-  margin: auto;
-  max-width: 140px;
+  margin: 0.25em;
+  width: 140px;
 }
 .issueCardText {
   text-align: center;
