--- a/src/styles/white-library-global-styles.css
+++ b/src/styles/white-library-global-styles.css
@@ -8,6 +8,13 @@ p {
   padding: 0 1em;
 }
 
+.issues-flow {
+  border: black solid 1px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .navbar-light .navbar-nav .nav-link {
   color: var(--primary-dark);
 }
